@@ -128,8 +128,6 @@ let plain_display accu ref env c =
     accu := hov 2 (pr ++ str":" ++ spc () ++ pc) :: !accu
   end
 
-let format_display l = prlist_with_sep fnl (fun x -> x) (List.rev l)
-
 (** Filters *)
 
 (** This function tries to see whether the conclusion matches a pattern. *)
@@ -191,8 +189,9 @@ let search_pattern gopt pat mods =
   let iter ref env typ =
     if filter ref env typ then plain_display ans ref env typ
   in
-  let () = generic_search gopt iter in
-  format_display !ans
+  generic_search gopt iter;
+  (* Is this tail recursive? Be careful with StackOverflows here *)
+  List.rev !ans
 
 (** SearchRewrite *)
 
@@ -220,8 +219,8 @@ let search_rewrite gopt pat mods =
   let iter ref env typ =
     if filter ref env typ then plain_display ans ref env typ
   in
-  let () = generic_search gopt iter in
-  format_display !ans
+  generic_search gopt iter;
+  List.rev !ans
 
 (** Search *)
 
@@ -236,8 +235,8 @@ let search_by_head gopt pat mods =
   let iter ref env typ =
     if filter ref env typ then plain_display ans ref env typ
   in
-  let () = generic_search gopt iter in
-  format_display !ans
+  generic_search gopt iter;
+  List.rev !ans
 
 (** SearchAbout *)
 
@@ -253,8 +252,8 @@ let search_about gopt items mods =
   let iter ref env typ =
     if filter ref env typ then plain_display ans ref env typ
   in
-  let () = generic_search gopt iter in
-  format_display !ans
+  generic_search gopt iter;
+  List.rev !ans
 
 type search_constraint =
   | Name_Pattern of Str.regexp
